feat:  creating photoProduct migration, mapping prhotoProduto, method of saving a photo for the product.